--- a/ControleReservatorio/ControleReservatorio.vcxproj.filters
+++ b/ControleReservatorio/ControleReservatorio.vcxproj.filters
@@ -18,7 +18,7 @@
     <None Include="ControleReservatorio.ino" />
     <None Include=".gitignore" />
     <None Include="README.md" />
-    <None Include="util.ino" />
+    <None Include="Funcoes.ino" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="__vm\.ControleReservatorio.vsarduino.h">
