Requisição para autenticação e envio de dados do sensor de vazao

--- a/ControleReservatorio/ControleReservatorio.vcxproj.filters
+++ b/ControleReservatorio/ControleReservatorio.vcxproj.filters
@@ -27,5 +27,13 @@
     <ClInclude Include="__vm\.senac-tcs-arduino.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HttpResponse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="HttpResponse.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
